--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="game-start">
-      <h1>The Wall Game</h1>
+      <h1>The <span>Wall</span> Game</h1>
       <p>Smash down the wall by hitting the red breakpoint!</p>
       <p>Use the mouse or the trackpad to move the racket up and down</p>
       <button id="start-button">Start Game</button>
@@ -20,6 +20,8 @@
     <div id="racket"></div>
     <div id="wall"></div>
 
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="./js/racket.js"></script>
+    <script type="text/javascript" src="./js/ball.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
   </body>
 </html>
