--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <body>
     <div id="game-start">
       <h1>The <span>Wall</span> Game</h1>
-      <p>Smash down the wall by hitting the red breakpoint!</p>
-      <p>Use the mouse or the trackpad to move the racket up and down</p>
+      <p>
+        Smash down the wall hit by hit!<br />
+        Use your mouse to move the racket.
+      </p>
       <button id="start-button">Start Game</button>
     </div>
 
     <div id="ball"></div>
     <div id="racket"></div>
+    <div id="wallTop"></div>
     <div id="wall"></div>
 
     <script type="text/javascript" src="./js/racket.js"></script>
