added timeout when the game is over

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
       <h1>The <span>Wall</span> Game</h1>
       <p>
         Smash down the wall hit by hit!<br />
-        Use your mouse to move the racket.
+        Use your mouse to move the racket.<br />
       </p>
       <button id="start-button">Start Game</button>
     </div>
+
+    <div id="retry"><p>Don't Give up!</p></div>
 
     <div id="ball"></div>
     <div id="racket"></div>
