collision effect added, you loose feature completed, you win feature started

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <button id="start-button">Start Game</button>
     </div>
 
-    <div id="retry"><p>Don't Give up!</p></div>
+    <h1 id="retry">Don't Give up!</h1>
 
     <div id="ball"></div>
     <div id="racket"></div>
-    <div id="wallTop"></div>
+    <!-- <div id="wallHead"></div> -->
     <div id="wall"></div>
 
     <script type="text/javascript" src="./js/racket.js"></script>
