win feature, win sounds, new lose sound

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
       <button id="start-button">Start Game</button>
     </div>
 
-    <h1 id="retry">Don't Give up!</h1>
+    <div id="lose">
+      <h1 id="retry">Don't Give up!</h1>
+      <p>The wall is still there...</p>
+    </div>
+
+    <div id="win">
+      <h1>You did it!</h1>
+      <p>Imagine there's no borders</p>
+    </div>
 
     <div id="ball"></div>
     <div id="racket"></div>
