--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <p>The wall is still there...</p>
     </div>
 
-    <div id="win">
+    <div id="game-win">
       <h1>You did it!</h1>
       <p>Imagine there's no borders</p>
+      <button id="refresh-button">Play Again</button>
     </div>
 
     <div id="ball"></div>
     <div id="racket"></div>
-    <!-- <div id="wallHead"></div> -->
     <div id="wall"></div>
 
     <script type="text/javascript" src="./js/racket.js"></script>
